package by.bsuir.glycemicindex.model;

/** User-input validation error. */
public final class ValidationException extends Exception {
    private static final long serialVersionUID = 1L;

    public ValidationException(String message) {
        super(message);
    }
}

